grading/compilation_failed/lab1,2 2022105673 김수진.zip_▒γ║╗5/compilation_stderr.txt
src/▒Γ║╗5.cpp:2:16: error: expected identifier before ‘;’ token
    2 | using namespace;
      |                ^
src/▒Γ║╗5.cpp: In function ‘int main()’:
src/▒Γ║╗5.cpp:7:9: error: ‘cin’ was not declared in this scope; did you mean ‘std::cin’?
    7 |         cin >> x >> y;
      |         ^~~
      |         std::cin
In file included from src/▒Γ║╗5.cpp:1:
/usr/include/c++/11/iostream:60:18: note: ‘std::cin’ declared here
   60 |   extern istream cin;           /// Linked to standard input
      |                  ^~~
src/▒Γ║╗5.cpp:11:9: error: ‘cout’ was not declared in this scope; did you mean ‘std::cout’?
   11 |         cout << x << '\t' << y << endl;
      |         ^~~~
      |         std::cout
In file included from src/▒Γ║╗5.cpp:1:
/usr/include/c++/11/iostream:61:18: note: ‘std::cout’ declared here
   61 |   extern ostream cout;          /// Linked to standard output
      |                  ^~~~
src/▒Γ║╗5.cpp:11:35: error: ‘endl’ was not declared in this scope; did you mean ‘std::endl’?
   11 |         cout << x << '\t' << y << endl;
      |                                   ^~~~
      |                                   std::endl
In file included from /usr/include/c++/11/iostream:39,
                 from src/▒Γ║╗5.cpp:1:
/usr/include/c++/11/ostream:684:5: note: ‘std::endl’ declared here
  684 |     endl(basic_ostream<_CharT, _Traits>& __os)
      |     ^~~~
make: *** [Makefile:158: build/linux/debug/▒Γ║╗5.o] Error 1
